--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,13 +7,13 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "3.10.9"
-kivy = {url = "https://github.com/kivy/Kivy/archive/master.zip"}
-kivymd = {url = "https://github.com/kivymd/KivyMD/archive/master.zip"}
+kivy = "2.2.1"
+kivymd = "^1.1.1"
+kivy-widgets = "^0.1.17"
 kaki = "^0.1.8"
 wakeonlan = "^3.0.0"
 trio = "^0.22.1"
 asks = "^3.0.0"
-kivy-widgets = "^0.1.17"
 
 
 
